--- a/.paket/Paket.Restore.targets
+++ b/.paket/Paket.Restore.targets
@@ -231,3 +231,10 @@
               Title="$(Title)"
               Authors="$(Authors)"
               Description="$(Description)"
+              Copyright="$(Copyright)"
+              RequireLicenseAcceptance="$(PackageRequireLicenseAcceptance)"
+              LicenseUrl="$(PackageLicenseUrl)"
+              ProjectUrl="$(PackageProjectUrl)"
+              IconUrl="$(PackageIconUrl)"
+              ReleaseNotes="$(PackageReleaseNotes)"
+              Tags="$(PackageTags)"
