--- a/.paket/Paket.Restore.targets
+++ b/.paket/Paket.Restore.targets
@@ -246,3 +246,11 @@
               IncludeSymbols="$(IncludeSymbols)"
               IncludeSource="$(IncludeSource)"
               PackageTypes="$(PackageType)"
+              IsTool="$(IsTool)"
+              RepositoryUrl="$(RepositoryUrl)"
+              RepositoryType="$(RepositoryType)"
+              SourceFiles="@(_SourceFiles->Distinct())"
+              NoPackageAnalysis="$(NoPackageAnalysis)"
+              MinClientVersion="$(MinClientVersion)"
+              Serviceable="$(Serviceable)"
+              AssemblyReferences="@(_References)"
