--- a/.paket/Paket.Restore.targets
+++ b/.paket/Paket.Restore.targets
@@ -264,3 +264,5 @@
               NuspecBasePath="$(NuspecBasePath)"
               NuspecProperties="$(NuspecProperties)"/>
   </Target>
+  <!--/+:cnd:noEmit-->
+</Project>
