--- a/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
+++ b/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
@@ -2,4 +2,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramew
+    <TargetFramework>netcoreapp
