--- a/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
+++ b/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
@@ -3,4 +3,5 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-  </Property
+  </PropertyGroup>
+  <Im
