--- a/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
+++ b/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
@@ -4,4 +4,4 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-  <Import Projec
+  <Import Project="..\..\.p
