--- a/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
+++ b/src/BitcoinAmiens.CryptoTradingBot.App/BitcoinAmiens.CryptoTradingBot.App.csproj
@@ -4,4 +4,5 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
-  <Import Project="..\..\.paket\Paket.Restore.targets" 
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
+</Project>
