Stop to use the __future__ module.

--- a/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
+++ b/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
@@ -2,4 +2,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <IsPackable>fa
+    <IsPackable>false</IsPackab
