--- a/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
+++ b/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
@@ -2,4 +2,5 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <IsPackable>false</IsPackab
+    <IsPackable>false</IsPackable>
+  </Pr
