--- a/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
+++ b/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
@@ -4,4 +4,4 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
-  <Import Project="..\..\.paket\Paket.Resto
+  <Import Project="..\..\.paket\Paket.Restore.targets" 
