Fast-forwarding changes

--- a/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
+++ b/test/BitcoinAmiens.CryptoTradingBot.App.Test/BitcoinAmiens.CryptoTradingBot.App.Test.csproj
@@ -5,4 +5,4 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
-</Project
+</Project>
